feat: api for county heatmaps
